[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprite/player/FlyingDemon6.png" type="Texture" id=1]
[ext_resource path="res://node/Character/Character.gd" type="Script" id=2]
[ext_resource path="res://node/UI/SpellHolder.tscn" type="PackedScene" id=3]
[ext_resource path="res://node/Spell/SpellLeech.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprite/player/FlyingDemon9.png" type="Texture" id=5]
[ext_resource path="res://sprite/player/FlyingDemon7.png" type="Texture" id=6]
[ext_resource path="res://sprite/player/FlyingDemon4.png" type="Texture" id=7]
[ext_resource path="res://sprite/player/FlyingDemon5.png" type="Texture" id=8]
[ext_resource path="res://sprite/player/FlyingDemon2.png" type="Texture" id=9]
[ext_resource path="res://sprite/player/FlyingDemon8.png" type="Texture" id=10]
[ext_resource path="res://sprite/player/FlyingDemon1.png" type="Texture" id=11]
[ext_resource path="res://sprite/player/FlyingDemon3.png" type="Texture" id=12]
[ext_resource path="res://node/Spell/SpellShoot.tscn" type="PackedScene" id=13]
[ext_resource path="res://node/Spell/SpellSummonWraith.tscn" type="PackedScene" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 7 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SpellHolder" parent="CanvasLayer" instance=ExtResource( 3 )]
position = Vector2( 245, 230 )

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 43.0
margin_top = 33.0
margin_right = 191.0
margin_bottom = 131.0
text = "aaaaaaaaaaaaaa"

[node name="Spells" type="Node2D" parent="."]

[node name="SpellLeech" parent="Spells" instance=ExtResource( 4 )]

[node name="SpellShoot" parent="Spells" instance=ExtResource( 13 )]

[node name="SpellSummonWraith" parent="Spells" instance=ExtResource( 14 )]

[node name="PlayerArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[connection signal="area_entered" from="PlayerArea" to="." method="_on_PlayerArea_area_entered"]
[connection signal="area_exited" from="PlayerArea" to="." method="_on_PlayerArea_area_exited"]
